Background and font added, player and gameboard factory functions created, as well as DOM functions.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,18 @@
     <title>BattleShip</title>
 </head>
 <body>
-    
+    <header><h1>BattleShip</h1></header>
+    <main>
+        <div class="center-block-container">
+            <div class="center-block">
+                <label for="nameInput">Enter Your Name</label>
+                <br>
+                <input id="nameInput" type="text" placeholder=" " required>
+            </div>
+            <br>
+            <button id="startBtn">Start Game</button>
+        </div>
+    </main>
+    <footer><h3>GrimHoney</h3></footer>
 </body>
 </html>
