Gameflow created, determines winner and ends the game. Ability to start a new game added.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <main>
         <div class="center-block-container">
             <div class="center-block">
-                <label for="nameInput">Enter Your Name</label>
+                <label id="name-input-label" for="nameInput">Enter Your Name</label>
                 <br>
                 <input id="nameInput" type="text" placeholder=" " required>
             </div>
