--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <br>
             <button id="startBtn">Start Game</button>
         </div>
+        <button id="music"></button>
     </main>
     <footer><h3>GrimHoney</h3></footer>
 </body>
